--- a/app/src/main/res/layout/tableforsettings.xml
+++ b/app/src/main/res/layout/tableforsettings.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView android:id="@+id/col1"
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+    >
+    <TextView android:id="@+id/typeOfWork"
         android:layout_margin="1dip"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:gravity="center_horizontal"
         android:text="" />
-    <TextView android:id="@+id/col2"
+    <TextView android:id="@+id/dataOfStart"
         android:layout_margin="1dip"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:gravity="center_horizontal"
         android:text="" />
-    <TextView android:id="@+id/col3"
+    <TextView android:id="@+id/kilometrs"
         android:layout_margin="1dip"
         android:layout_weight="1"
         android:layout_width="0dp"
@@ -20,7 +23,7 @@
         android:text="" />
 
     <TextView
-        android:id="@+id/col4"
+        android:id="@+id/leftKilo"
         android:layout_margin="1dip"
         android:layout_weight="1"
         android:layout_width="0dp"
