--- a/app/src/main/res/layout/table_row.xml
+++ b/app/src/main/res/layout/table_row.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView android:id="@+id/col1"
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width = "match_parent"
+    android:layout_height = "wrap_content"
+    >
+    <TextView android:id="@+id/dateOfStart"
         android:layout_margin="1dip"
         android:layout_weight="1"
         android:gravity="center_horizontal"
         android:text="" />
-    <TextView android:id="@+id/col2"
+    <TextView android:id="@+id/kilometrs"
         android:layout_margin="1dip"
         android:layout_weight="1"
         android:gravity="center_horizontal"
